--- a/style.css
+++ b/style.css
@@ -2,7 +2,11 @@
     font-family: "Comic Sans MS", "Comic Sans", cursive;
     font-weight: 500;
 }
-.bondo{
+.bondo {
+    box-sizing: content-box;
     background-color: rgb(255, 255, 255);
     color: white;
+    display: block;
+    height: 30px;
+    width: 100px;
 }
